fixes overflow x

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -1,4 +1,5 @@
 .layout {
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
